docs. add posts - docs. create blog with gatsby (ko, en) - docs. react basic - docs. react updater - fix. update resume file - fix. change some css for readability

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+  font-family: sans-serif;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
